# xArm6-Pointer-Node

./: .gitignore  .gitmodules  README.md  run_real.sh
src/weed_detection/: package.xml  setup.py
src/weed_detection/config/: camera_params.yaml  homography.yaml
src/weed_detection/launch/: weed_detection.launch.py
src/weed_detection/weed_detection/: detect_weeds.py  segment_green.py  weed_detector_node.py  weed_sequencer_node.py
src/xarm6_pointer/: CMakeLists.txt  package.xml
src/xarm6_pointer/launch/: planning_env.launch.py  pointer_node.launch.py
src/xarm6_pointer/src/: point_at_target.cpp
